composite_tape_content стало composite_tape_preview - там осатлись только загловок и время composite_tape_content_with_img стало composite_tape_content - все новости будут с сообощением, если же картинки не будет просто программно уменьшить размера ImageView под картинку

--- a/NewsTagil/src/main/res/layout-small/composite_tape_content.xml
+++ b/NewsTagil/src/main/res/layout-small/composite_tape_content.xml
@@ -16,7 +16,7 @@
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_marginLeft="15dp"
-                android:layout_width="60dp"
+                android:layout_width="70dp"
                 android:layout_height="50dp">
 
             <TextView
@@ -52,7 +52,11 @@
                     android:textSize="18dp"
                     android:textColor="#ff181818"
                     android:id="@+id/composite_tape_content_name_post"/>
+            <ImageView
+                    android:layout_width="220dp"
+                    android:layout_height="80dp">
 
+            </ImageView>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
