--- a/NewsTagil/src/main/res/layout-large/composite_tape_content.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_tape_content.xml
@@ -10,8 +10,8 @@
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_marginTop="10dp"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true">
 
         <LinearLayout
@@ -53,7 +53,11 @@
                     android:textSize="22dp"
                     android:textColor="#ff181818"
                     android:id="@+id/composite_tape_content_name_post"/>
+            <ImageView
+                    android:layout_width="330dp"
+                    android:layout_height="120dp">
 
+            </ImageView>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
