--- a/NewsTagil/src/main/res/layout-xlarge/composite_tape_content.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/composite_tape_content.xml
@@ -10,20 +10,20 @@
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_marginTop="10dp"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true">
 
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_marginLeft="15dp"
-                android:layout_width="150dp"
-                android:layout_height="100dp">
+                android:layout_width="110dp"
+                android:layout_height="50dp">
 
             <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="30dp"
+                    android:textSize="20dp"
                     android:layout_marginTop="4dp"
                     android:textColor="#ff474747"
                     android:text="3.07.13"
@@ -32,7 +32,7 @@
             <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="30dp"
+                    android:textSize="20dp"
                     android:textColor="#ff474747"
                     android:text="    00:16"
                     android:id="@+id/composite_tape_content_time"/>
@@ -50,16 +50,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:text="Реквием по бизнесу"
-                    android:textSize="33dp"
+                    android:textSize="22dp"
                     android:textColor="#ff181818"
                     android:id="@+id/composite_tape_content_name_post"/>
+            <ImageView
+                    android:layout_width="330dp"
+                    android:layout_height="120dp">
 
+            </ImageView>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:layout_marginTop="2dp"
                     android:text=" В минувшем году в Нижнем Тагиле«умерло»более 90 тысяч юридических лиц.«Смертность» бизнеса Северной столицыболее чем в два раза превысили показателипрошлого года ..."
-                    android:textSize="20dp"
+                    android:textSize="16dp"
                     android:textColor="#ff474747"
                     android:id="@+id/composite_tape_content_post_content"/>
         </LinearLayout>
