--- a/NewsTagil/src/main/res/layout/composite_tape_content.xml
+++ b/NewsTagil/src/main/res/layout/composite_tape_content.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.c om/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -52,7 +52,11 @@
                     android:textSize="18dp"
                     android:textColor="#ff181818"
                     android:id="@+id/composite_tape_content_name_post"/>
+            <ImageView
+                    android:layout_width="220dp"
+                    android:layout_height="80dp">
 
+            </ImageView>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
