--- a/NewsTagil/src/main/res/layout/composite_first_button_nav.xml
+++ b/NewsTagil/src/main/res/layout/composite_first_button_nav.xml
@@ -4,38 +4,38 @@
         android:background="#000"
         android:paddingLeft="0dp" >
 
-    <Button
+        <Button
             android:id="@+id/first_tape_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/first_test"/>
 
         <Button
             android:id="@+id/first_dialogs_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/first_test_second" />
 
         <Button
             android:id="@+id/first_elect_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/first_nav_elect" />
 
         <Button
             android:id="@+id/first_useful_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/first_nav_useful" />
 
         <Button
             android:id="@+id/first_setting_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/first_nav_settings" />
  </LinearLayout>
