--- a/NewsTagil/src/main/res/layout-small/composite_header.xml
+++ b/NewsTagil/src/main/res/layout-small/composite_header.xml
@@ -19,31 +19,34 @@
             android:layout_marginTop="4dp"
             android:orientation="horizontal" >
 
-            <TextView
+            <Button
                 android:id="@+id/composite_header_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="10dp"
-                android:text="Главная"
+                android:background="@color/Transparent"
+                android:text="@string/header_main_button"
                 android:textColor="#4D433A" />
 
-            <TextView
+            <Button
                 android:id="@+id/composite_header_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:text="Знакомства"
+                android:background="@color/Transparent"
+                android:text="@string/header_main_contact"
                 android:textColor="#4D433A" />
 
-            <TextView
+            <Button
                 android:id="@+id/composite_header_ads"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:text="Объявления"
+                android:background="@color/Transparent"
+                android:text="@string/ads"
                 android:textColor="#4D433A" />
 
             <Button
