--- a/NewsTagil/src/main/res/layout-large/composite_tape_content.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_tape_content.xml
@@ -55,7 +55,8 @@
                     android:id="@+id/composite_tape_content_name_post"/>
             <ImageView
                     android:layout_width="330dp"
-                    android:layout_height="120dp">
+                    android:layout_height="120dp"
+                    android:id="@+id/composite_tape_content_img">
 
             </ImageView>
             <TextView
