--- a/NewsTagil/src/main/res/layout/composite_tape_content.xml
+++ b/NewsTagil/src/main/res/layout/composite_tape_content.xml
@@ -54,7 +54,8 @@
                     android:id="@+id/composite_tape_content_name_post"/>
             <ImageView
                     android:layout_width="220dp"
-                    android:layout_height="80dp">
+                    android:layout_height="80dp"
+                    android:id="@+id/composite_tape_content_img">
 
             </ImageView>
             <TextView
