large -layout composite contact  -переверстан

--- a/NewsTagil/src/main/res/layout-large/composite_contact_content.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_contact_content.xml
@@ -33,7 +33,7 @@
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
                             android:background="@drawable/ads_button_bg"
-                            android:id="@+id/composite_contact_content_ava"
+                            android:id="@+id/composite_contact_content_avatar"
                             android:layout_gravity="center_horizontal|top"/>
 
                     <LinearLayout
@@ -64,11 +64,11 @@
 
                         <Button
                                 android:layout_width="300dp"
-                                android:layout_height="36dp"
+                                android:layout_height="40dp"
                                 android:textSize="22dp"
                                 android:layout_marginTop="12dp"
                                 android:text="Начать диалог"
-                                android:textColor="#ffccc9c3"
+                                android:textColor="@color/lightGray"
                                 android:background="@drawable/ads_button_bg"
                                 android:id="@+id/composite_contact_content_start_dialog"
                                 android:layout_gravity="left|center_vertical"/>
@@ -205,7 +205,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                        android:orientation="vertical"
+                        android:orientation="horizontal"
                         android:layout_width="fill_parent"
                         android:layout_height="60dp"
                         android:background="@drawable/contact_ley_bg"
@@ -223,11 +223,22 @@
                             android:textColor="#fffd8001"
                             android:text="Ищу:"
                             android:id="@+id/composite_contact_content_seek"
-                            android:layout_gravity="left|center_vertical"/>
+                            android:layout_gravity="left"/>
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginLeft="10dp"
+                            android:textSize="20dp"
+                            android:textColor="#fffd8001"
+                            android:text="content"
+                            android:id="@+id/composite_contact_content_seek_content"
+                            android:layout_gravity="left"/>
                 </LinearLayout>
 
                 <LinearLayout
-                        android:orientation="vertical"
+                        android:orientation="horizontal"
                         android:layout_width="fill_parent"
                         android:layout_height="60dp"
                         android:background="@drawable/contact_ley_bg"
@@ -245,11 +256,22 @@
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_for_znakomstv"
-                            android:layout_gravity="left|center_vertical"/>
+                            android:layout_gravity="left|"/>
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:text="content"
+                            android:layout_marginTop="16dp"
+                            android:textSize="20dp"
+                            android:layout_marginLeft="10dp"
+                            android:textColor="#fffd8001"
+                            android:id="@+id/composite_contact_content_for_znakomstv_content"
+                            android:layout_gravity="left"/>
                 </LinearLayout>
 
                 <LinearLayout
-                        android:orientation="vertical"
+                        android:orientation="horizontal"
                         android:layout_width="fill_parent"
                         android:layout_height="60dp"
                         android:background="@drawable/contact_ley_bg"
@@ -258,20 +280,31 @@
                         android:id="@+id/linearLayout6">
 
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="Семейное положение:"
+                        android:textSize="20dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginLeft="10dp"
+                        android:textColor="#fffd8001"
+                        android:id="@+id/composite_contact_content_polojenie"
+                        android:layout_gravity="left"/>
+                    <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:text="Семейное положение:"
+                            android:text="content"
                             android:textSize="20dp"
                             android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
-                            android:id="@+id/composite_contact_content_polojenie"
-                            android:layout_gravity="left|center_vertical"/>
+                            android:id="@+id/composite_contact_content_polojenie_content"
+                            android:layout_gravity="left"/>
                 </LinearLayout>
 
                 <LinearLayout
-                        android:orientation="vertical"
+                        android:orientation="horizontal"
                         android:layout_width="fill_parent"
                         android:layout_height="60dp"
                         android:background="@drawable/contact_ley_bg"
@@ -289,11 +322,22 @@
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_hobby"
-                            android:layout_gravity="left|center_vertical"/>
+                            android:layout_gravity="left"/>
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:text="content"
+                            android:textSize="20dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginLeft="10dp"
+                            android:textColor="#fffd8001"
+                            android:id="@+id/composite_contact_content_hobby_content"
+                            android:layout_gravity="left"/>
                 </LinearLayout>
 
                 <LinearLayout
-                        android:orientation="vertical"
+                        android:orientation="horizontal"
                         android:layout_width="fill_parent"
                         android:layout_height="60dp"
                         android:background="@drawable/contact_ley_bg"
@@ -311,11 +355,22 @@
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_music"
-                            android:layout_gravity="left|center_vertical"/>
+                            android:layout_gravity="left"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="content"
+                        android:textSize="20dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginLeft="10dp"
+                        android:textColor="#fffd8001"
+                        android:id="@+id/composite_contact_content_music_content"
+                        android:layout_gravity="left"/>
                 </LinearLayout>
 
                 <LinearLayout
-                        android:orientation="vertical"
+                        android:orientation="horizontal"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:minHeight="100dp"
@@ -333,7 +388,18 @@
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_about"
-                            android:layout_gravity="left|center_vertical"/>
+                            android:layout_gravity="left"/>
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:text="content"
+                            android:textSize="22dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginLeft="10dp"
+                            android:textColor="#fffd8001"
+                            android:id="@+id/composite_contact_content_about_content"
+                            android:layout_gravity="left"/>
                 </LinearLayout>
 
             </RelativeLayout>
